TechTree/Content/Tree.css
techtree {
    display: block;
    position: relative;
    font-size: 200%;
    text-align:center;
}

building::before, unit::before {
	content: attr(symbol);
}

building, builds, info {
    display: block;
    width: 2.5em;
    border-style: solid;
    border-width: 2px;
    border-radius: 0.3em;
    position: relative;
    color: black;
    background-color: white;
}

building {
    position: absolute;
    padding-top: 0.2em;
    border-color: #000;
    cursor:pointer;
}

unit {
    display: block;
    width: 100%;
    border-top-style: solid;
    border-top-width: 2px;
    border-top-color: inherit;
}

unit::before {
    font-size: 60%;
}

builds, info {
    z-index: 1;
    display: none;
    position: absolute;
    top: -2px; /* building border width */
    border-color: #aaa;
}

info {
    width: 9em;
    min-height: 3.5em;
    left: 3em;
    padding: 0.25em;
}

builds {
    left: 12.5em;
}

building.hover > info, unit.hover > info, building.hover builds {
    display: block;
}

builds::before {
    content: "builds";
    font-size: 75%;
}

info > * {
    display: block;
}

info > *:not(name) {
    font-size: 50%;
}

info > *:not(name):not(feature) {
    padding-left: 2.5em;
}

info > *:not(name):not(feature)::before {
    position: absolute;
    left: 0.5em;
}

info cost > *, info stats > * {
    white-space: nowrap;
}

info cost > *:not(:first-child), info stats > *:not(:first-child) {
    margin-left: 0.5em;
}

info cost::before {
    content: "cost: ";
}

info stats::before {
    content: "stats: ";
}

info builtat::before {
    content: "built at: ";
}

info requires::before {
    content: "requires: ";
}

info upgradesFrom::before {
    content: "upgrade of: ";
}

info cost minerals::before {
    content: "\2604";
    color: #06f;
}

info cost vespine::before {
    content: "\2668";
    color: #0c0;
}

info cost supply::before {
    content: "\26FD";
    color: #f90;
}

info cost supply.positive::before {
    content: "\26FD +";
    color: #0e0;
}

info cost supply.positive {
    color: #0e0;
}

info cost time::before {
    content: "\26E3";
    color: #999;
}

info stats health::before {
    content: "\2629";
    color: #c00;
}

info stats armor::before {
    content: "\26C9";
    color: #0c0;
}

info stats mana::before {
    content: "\26A1";
    color: #0cf;
}

info stats actionpoints::before {
    content: "\261B";
    color: #c0c;
}

info stats vision::before {
    content: "\26EF";
    color: #aa0;
}

info stats detector::before {
    content: "detector";
    color: #fc0;
}

info feature:first-of-type {
    margin-top: 0.5em;
}

info feature {
    text-align: left;
}

info feature::before {
    content: attr(name) ":";
    text-decoration: underline;
    margin-right: 0.4em;
}

techtree link {
    display: block;
    position: absolute;
    z-index: -1;
}

techtree link.left, techtree link.right {
    border-top: 2px solid green;
}

techtree link.left, techtree link.straight {
    border-left: 2px solid green;
}

techtree link.right {
    border-right: 2px solid green;
}

techtree link.straight {
    width: 5px;
}

